@@ -35,7 +35,7 @@
         </menu>
         <menu id="view-menu" label="&viewMenu.label;" accesskey="&viewMenu.accesskey;">
           <menupopup id="view-popup">
-            <menuitem label="&fullScreen.label;" accesskey="&fullScreen.accesskey;" />
+            <menuitem label="&fullScreen.label;" accesskey="&fullScreen.accesskey;" oncommand="startDOMi();" />
           </menupopup>
         </menu>
         <menu id="help-menu" label="&helpMenu.label;" accesskey="&helpMenu.accesskey;">
