@@ -13,11 +13,12 @@
       <xul:tabpanel orient="vertical" flex="1">
         <xul:toolbox>
           <xul:toolbar>
-            <xul:toolbarbutton label="Back"/>
-            <xul:toolbarbutton label="Forward"/>
-            <xul:toolbarbutton label="Home" oncommand="goHome();"/>
-            <xul:textbox flex="1"/>
-            <xul:toolbarbutton label="Open" oncommand="openFile();"/>
+            <xul:toolbarbutton class="home-btn" oncommand="goHome(document.getBindingParent(this));"/>
+            <xul:toolbarbutton class="back-btn" oncommand="goBack(document.getBindingParent(this));"/>
+            <xul:toolbarbutton class="forward-btn" oncommand="goForward(document.getBindingParent(this));"/>
+            <xul:toolbarbutton class="previous-btn" oncommand="goPrevious(document.getBindingParent(this));"/>
+            <xul:toolbarbutton class="next-btn" oncommand="goNext(document.getBindingParent(this));"/>
+            <xul:label xbl:inherits="value=contentTitle" flex="1"/>
           </xul:toolbar>
         </xul:toolbox>
 
