@@ -1,0 +1,9 @@
+LIBXUL_SDK = [*** REPLACE THIS WITH XULRNNER SDK DIRECTORY ***]
+
+NSPR_INCLUDES = [*** REPLACE THIS WITH NSPR CFLAGS ***]
+NSPR_LIBS = [*** REPLACE THIS WITH NSPR LIBS ***]
+
+CHMLIB_INCLUDES = [*** REPLACE THIS WITH CHMLIB CFLAGS ***]
+CHMLIB_LIBS = [*** REPLACE THIS WITH CHMLIB LIBS ***]
+
+include ./common.mk
