@@ -20,7 +20,7 @@
 #ifndef __CS_CHMFILE_H__
 #define __CS_CHMFILE_H__
 
-#define CS_DEBUG 1
+#define CS_DEBUG
 
 #ifdef CS_DEBUG
 #define d(x) x
