@@ -1,4 +1,9 @@
-ChmSee 1.x.x 2011-xx-xx
+ChmSee 1.99.x 2011-xx-xx
+-----------------------
+* Move ChmSee from gtk + gecko embbeding to xul + xpcom
+* Support multi-documents
+
+ChmSee 1.3.x 2011-xx-xx
 -----------------------
 * Update Vietnamese po
 * Fix a bug cause of opening an unextracted chm with subpage failure
